<resources>
    <string name="app_name">Jejaknesia</string>
    <string name="background_image">Background Image</string>
    <string name="bg_text">Travel more,\nworry less</string>
    <string name="get_started">Get Started</string>
    <string name="tv_create_account">Create an account</string>
    <string name="edit_text_name">Nama</string>
    <string name="edit_text_email">Email</string>
    <string name="register">Register</string>
    <string name="input_name">Please, enter your name</string>
    <string name="input_email">Please, enter your email</string>
    <string name="input_password">Please, enter your password</string>
    <string name="edit_text_password">Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">Login here</string>
    <string name="tv_login_account">Log in to your account</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="register_here">Register here</string>
    <string name="register_page">Register</string>
    <string name="edit_text_retype_password">Ulangi Password</string>
    <string name="signin_withgoogle">Atau masuk dengan</string>
    <string name="login_page">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_blog">Blog</string>
    <string name="discover_blog">Discover popular blog here</string>
    <string name="blog_page">Blog</string>
    <string name="blog_item">Blog Item</string>
    <string name="blog_title">Judul Blog</string>
    <string name="blog_content">Isi konten blog</string>
    <string name="blog">Blog</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="my_profile">My Profile</string>
    <string name="home_page">Home</string>
    <string name="welcome_name">Welcome, %1s</string>
    <string name="explore_beautiful_world">Explore beautiful world</string>
    <string name="text_only">We hope you can find what you are looking for!</string>
    <string name="enter_destination">Masukkan destinasi</string>
    <string name="itinerary_planner">Itinerary Planner</string>
    <string name="departure_date">Masukkan tanggal pergi</string>
    <string name="arrival_date">Masukkan tanggal pulang</string>
    <string name="choose_your_preferences">Choose your preferences</string>
    <string name="popular">Popular</string>
    <string name="balanced">Balanced</string>
    <string name="hidden_gems">Hidden Gems</string>
    <string name="typical">Tipikal perjalanan apakah yang kamu sukai?</string>
    <string name="slow_easy"><![CDATA[Slow & Easy]]></string>
    <string name="medium">Medium</string>
    <string name="fast_paced">Fast-paced</string>
    <string name="atmosphere">Suasana apakah yang kamu sukai? (Ramai atau Tenang)</string>
    <string name="art_culture"><![CDATA[Art & Culture]]></string>
    <string name="outdoor">Outdoor</string>
    <string name="relaxing">Relaxing</string>
    <string name="romance">Romance</string>
    <string name="beach">Beach</string>
    <string name="lake">Lake</string>
    <string name="mountain">Mountain</string>
    <string name="historical">Historical</string>
    <string name="shopping">Shopping</string>
    <string name="wildlife">Wildlife</string>
    <string name="forest">Forest</string>
    <string name="culinary">Culinary</string>
    <string name="water_activities">Water Act.</string>
    <string name="city">City</string>
    <string name="spiritual">Spiritual</string>
    <string name="choose_category">Pilih berdasarkan kategori yang kamu inginkan ya!</string>
    <string name="add_result">Add result</string>
    <string name="preference">Preference</string>
    <string name="generate_result">Generate Result</string>
    <string name="profile">Profile</string>
    <string name="profile_image">profile_image</string>
    <string name="logout">Logout</string>
    <string name="publish_date">%1s</string>
    <string name="blog_detail_page">Detail Blog</string>
    <string name="alert_message">Akun kamu berhasil didaftarkan</string>
    <string name="confirm_message">OK</string>
    <string name="caption">Travel more,\n worry less</string>
    <string name="detail_image">Detail Image</string>
    <string name="text_category">Berdasarkan Preferensi Kamu</string>
    <string name="ruang_terbuka">Ruang Terbuka</string>
    <string name="tempat_bersejarah">Tempat Bersejarah</string>
    <string name="seni_dan_budaya"><![CDATA[Seni & Budaya]]></string>
    <string name="aktivitas_air">Aktivitas Air</string>
    <string name="hutan_flora">Hutan / Flora</string>
    <string name="berkeliling_kota">Berkeliling Kota</string>
    <string-array name="data_title">
        <item>4 Fakta Menarik Labuan Bajo, Kota Seribu Sunset</item>
        <item>Alasan Kenapa Orang Lebih Pilih Solo Traveling Dibanding Rombongan</item>
        <item>Inilah Kriteria Masyarakat Indonesia saat Liburan, Pilih yang Nyaman</item>
        <item>Berlibur mengubah Anda menjadi orang yang lebih baik</item>
        <item>Travelling ke Alam Membangun Edukasi Humanis</item>
    </string-array>
    <string-array name="data_written_by">
        <item>Farid Maulana Faqih</item>
        <item>Rina Anggraeni</item>
        <item>Syifa Fauziah</item>
        <item>Kaisa</item>
        <item>Purwanto</item>
    </string-array>
    <string-array name="data_publish_date">
        <item>16 Mei 2023</item>
        <item>10 Mei 2023</item>
        <item>21 Mei 2023</item>
        <item>26 Mei 2023</item>
        <item>17 April 2023</item>
    </string-array>
</resources>