<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp"
    tools:context=".ui.main.MainActivity">

    
    
    <ImageView
        android:id="@+id/iv_logo_without_name"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/jejaknesia_logo__new_vertic"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_name"
            android:textSize="16sp"
            android:fontFamily="@font/quando"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_logo_without_name"
            app:layout_constraintTop_toTopOf="@id/iv_logo_without_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_beautiful_world"
        android:textSize="18sp"
        android:fontFamily="@font/quando"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/iv_logo_without_name"
        app:layout_constraintTop_toBottomOf="@id/welcome_name" />

    <TextView
        android:id="@+id/text_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_only"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/quando"
        android:layout_marginTop="32dp"
       android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_without_name"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/itinerary_planner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_radius_bg"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_only">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/quando"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choose_category" />

        <RadioGroup
            android:id="@+id/radio_group_options"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/ruang_terbuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruang_terbuka" />

            <RadioButton
                android:id="@+id/tempat_bersejarah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempat_bersejarah" />

            <RadioButton
                android:id="@+id/seni_dan_budaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seni_dan_budaya" />

            <RadioButton
                android:id="@+id/relaxing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relaxing" />

            <RadioButton
                android:id="@+id/aktivitas_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aktivitas_air" />

            <RadioButton
                android:id="@+id/hutan_flora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hutan_flora" />

            <RadioButton
                android:id="@+id/berkeliling_kota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berkeliling_kota" />

        </RadioGroup>



        <Button
            android:id="@+id/btn_chosen_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/generate_result" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>