<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <ImageView
            android:id="@+id/iv_blog"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/blog_item"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_jejaknesia_background" />

        <TextView
            android:id="@+id/tv_blog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/quando"
            android:maxLines="3"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/iv_blog"
            card_view:layout_constraintTop_toTopOf="@id/iv_blog"
            tools:text="@string/blog_title" />

        <TextView
            android:id="@+id/blog_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/quando"
            android:maxLines="3"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_blog"
            card_view:layout_constraintEnd_toEndOf="@id/tv_blog_title"
            card_view:layout_constraintStart_toStartOf="@id/tv_blog_title"
            card_view:layout_constraintTop_toBottomOf="@id/tv_blog_title"
            tools:text="@string/blog_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>